2011-10-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: remove redundant settings of `errexit' shell flag
	* tests/aclocal-path-install-serial.test: Do not set the
	`errexit' shell flag, as it is already set by `tests/defs'.
	* tests/aclocal-path-install.test: Likewise.
	* tests/aclocal-path-nonexistent.test: Likewise.
	* tests/aclocal-path-precedence.test: Likewise.
	* tests/aclocal-path.test: Likewise.
	* tests/dist-auxfile-2.test: Likewise.
	* tests/dist-auxfile.test: Likewise.
	* tests/distcheck-pr9579.test: Likewise.
	* tests/javadir-undefined.test: Likewise.
	* tests/subpkg-yacc.test: Likewise.
	* tests/test-extensions-cond.test: Likewise.
	* tests/test-extensions.test: Likewise.
	* tests/uninstall-fail.test: Likewise.
	* tests/uninstall-pr9578.test: Likewise.
	* tests/distcheck-override-infodir.test: Likewise.  Also,
	fix typo in heading comments since we are at it.

2011-10-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	fixup: add forgotten test scripts to $(TESTS)
	* tests/list-of-tests.mk: Add various test scripts that are in
	the git repository but weren't correctly listed in $(TESTS).
	The inconsistency had been caused by botched/incomplete merges,
	and revealed by the "maintainer-check-list-of-tests" target.

2011-10-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure with FreeBSD make and Yacc in VPATH
	* tests/subpkg.test: Some cosmetic adjustments.  Move the tests
	checking that $(YLWRAP) is defined and installed properly when
	ylwrap is in a default auxdir found in a parent package ...
	* tests/subpkg-yacc.test: ... into this new test, which carefully
	avoids to trigger the known bug#7884 (combo FreeBSD make plus Yacc
	plus VPATH build).
	* tests/Makefile.am (TESTS): Update.

2011-10-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: avoid spurious failure in 'parallel-tests3.test'
	This fixes automake bug#8788.
	* tests/parallel-tests3.test: To ensure that the serial run of