@@ -89,9 +89,8 @@ END
   $ACLOCAL
   $AUTOCONF
 
-  # FIXME: this is not good for installcheck; fix after merging
-  # into testsuite-work.
-  "$top_testsrcdir"/lib/install-sh -d $auxdir
+  "$am_scriptdir"/install-sh -d $auxdir \
+    || fatal_ "creating directory \`$auxdir' with install-sh"
   if test $add_missing = yes; then
     $AUTOMAKE -a --copy
     for f in $required_files; do
@@ -103,9 +102,8 @@ END
     done
   else
     for f in $required_files; do
-      # FIXME: this is not good for installcheck; fix after merging
-      # into testsuite-work.
-      cp "$top_testsrcdir"/lib/$f $auxdir/$f
+      cp "$am_scriptdir"/$f $auxdir/$f \
+        || fatal_ "faild to fetch auxiliary script \`$f'"
       # See comments above.
       chmod a-w $auxdir/$f
     done
