@@ -79,7 +79,8 @@ END
   grep "^configure\\.in:6:.* required file.*$auxdir_rx/zardoz"    stderr
 
   touch $auxdir/foo.txt $auxdir/bar.sh $auxdir/zardoz
-  cp "$testsrcdir"/../lib/missing "$testsrcdir"/../lib/install-sh $auxdir
+  cp "$am_scriptdir"/missing "$am_scriptdir"/install-sh $auxdir \
+    || fatal_ "fetching auxiliary scripts \`missing' and \`install-sh'"
   $AUTOMAKE
   ./configure
   $MAKE test
