@@ -24,8 +24,7 @@ mkdir test-drivers
 
 cp "$testsrcdir"/trivial-test-driver test-drivers/triv \
   || fatal_ "failed to fetch auxiliary script trivial-test-driver"
-# FIXME: better support for installcheck ...
-cp "$top_testsrcdir"/lib/test-driver test-drivers/dflt \
+cp "$am_scriptdir"/test-driver test-drivers/dflt \
   || fatal_ "failed to fetch auxiliary script test-driver"
 
 cat >> configure.in <<'END'
