@@ -23,8 +23,7 @@ am_parallel_tests=yes
 
 cp "$testsrcdir"/trivial-test-driver . \
   || fatal_ "failed to fetch auxiliary script trivial-test-driver"
-# FIXME: better support for installcheck ...
-cp "$top_testsrcdir"/lib/tap-driver.pl . \
+cp "$am_scriptdir"/tap-driver.pl . \
   || fatal_ "failed to fetch auxiliary script tap-driver.pl"
 
 cat >> configure.in << END
