@@ -1,5 +1,16 @@
 2011-10-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: more faithful 'installcheck' support in few tests
+	* tests/test-driver-acsubst.test: Use the `$am_scriptdir'
+	variable instead of `$testsrcdir/../lib', to test more
+	faithfully under "make installcheck".
+	* tests/test-driver-cond.test: Likewise.
+	* tests/dist-auxfile.test: Likewise, and add one more use
+	of `fatal_' to report hard errors.
+	* tests/tests/dist-auxdir-many-subdirs.test: Likewise.
+
+2011-10-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests: remove redundant settings of `errexit' shell flag
 	* tests/aclocal-path-install-serial.test: Do not set the
 	`errexit' shell flag, as it is already set by `tests/defs'.
